# rust-framegraph

./: Cargo.toml  LICENSE  build.rs  notes.txt
api_types/: Cargo.toml
api_types/src/: buffer.rs  device.rs  framebuffer.rs  handle.rs  image.rs  lib.rs  pipeline.rs  renderpass.rs  shader.rs  surface.rs  swapchain.rs
api_types/src/device/: allocator.rs  debug.rs  interface.rs  physical.rs  queue.rs  resource.rs
context/: Cargo.toml
context/src/: lib.rs  per_thread.rs  pipeline.rs  render_context.rs  shader.rs  vulkan_render_context.rs
context/src/api_types/: buffer.rs  device.rs  image.rs  instance.rs  mod.rs  renderpass.rs  surface.rs  swapchain.rs  vulkan_command_buffer.rs
framegraph/: Cargo.toml
framegraph-examples/: Cargo.toml  build.rs
framegraph-examples/shaders/: model.frag  model.vert  phong.frag  phong.vert  ubo.frag  ubo.vert
framegraph-examples/src/: deferred_example.rs  example.rs  main.rs  model_example.rs  phong_example.rs  ubo_example.rs
framegraph/src/: attachment.rs  barrier.rs  binding.rs  command_list.rs  compiler.rs  compute_pass_node.rs  copy_pass_node.rs  executor.rs  frame.rs  frame_graph.rs  graphics_pass_node.rs  i_pass_node.rs  lib.rs  linked_node.rs  linker.rs  pass_builder.rs  pass_node.rs  pass_type.rs  pipeline.rs  present_pass_node.rs  renderpass_contract.rs  renderpass_manager.rs  shader.rs  vulkan_descriptors.rs  vulkan_frame_graph.rs
framegraph/src/resource/: i_resource_manager.rs  mod.rs  resource_manager.rs  vulkan_resource_manager.rs
passes/: Cargo.toml  build.rs
passes/shaders/: blur.comp  blur.compute.glsl  imgui.frag  imgui.vert  shadow.frag  shadow.vert
passes/src/: blit.rs  blur.rs  clear.rs  imgui.rs  imgui_draw.rs  lib.rs  shadow.rs
profiling/: Cargo.toml
profiling/src/: lib.rs
shaders/: transient_input.frag  transient_input.vert
src/: lib.rs  main.rs
src/api_types/: device.rs  image.rs  instance.rs  mod.rs  surface.rs  swapchain.rs
src/context/: mod.rs  pipeline.rs  render_context.rs  shader.rs
src/examples/: mod.rs
src/examples/uniform_buffer/: mod.rs  transient_input_pass.rs  ubo_pass.rs
src/framegraph/: frame_graph.rs  mod.rs  pass_builder.rs  pass_node.rs
src/resource/: resource_manager.rs
src/utility/: constants.rs  debug.rs
src/utility/share/: mod.rs  v1.rs
test-renderer/: Cargo.toml  build.rs
test-renderer/shaders/: hello.frag  hello.vert
test-renderer/src/: lib.rs  main.rs
test-renderer/src/examples/uniform_buffer/: mod.rs  transient_input_pass.rs  ubo_pass.rs
test-renderer/src/utility/: constants.rs  platforms.rs
test-renderer/src/utility/share/: mod.rs  v1.rs
util/: Cargo.toml
util/src/: camera.rs  image.rs  lib.rs  math.rs
