[package]
name = "context"
version = "0.1.0"
edition = "2021"

[dependencies]
winit           = "^0.27"
ash             = {version = "^0.36", features = ["linked"]}
ash-window      = "^0.9"
gpu-allocator   = "^0.17"
    log             = "0.4"
image           = "^0.23"
num             = "^0.4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "^0.3", features = ["windef", "libloaderapi"] }
