[package]
name = "context"
version = "0.1.0"
edition = "2021"

[dependencies]
winit           = "^0.29"
ash             = {version = "^0.38", features = ["linked"]}
num             = "^0.4"
tracing         = "0.1.40"
api_types       = {path="../api_types"}
profiling       = {path="../profiling"}

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "^0.3", features = ["windef", "libloaderapi"] }
