[package]
name = "framegraph-examples"
version = "0.0.1"
edition = "2021"

[dependencies]
libc                = "0.2.147"
ash                 = {version = "^0.37", features = ["linked"]}
ash-window          = "^0.12"
image               = "^0.23"
memoffset           = "^0.6"
cgmath              = "^0.18"
tobj                = "^3.2"
num                 = "^0.4"
context             = {path="../context"}
framegraph          = {path="../framegraph"}
passes              = {path="../passes"}
util                = {path="../util"}
glam                = "0.21.2"
gpu-allocator       = "^0.25"

# released versions of imgui-winit-support use an older version of winit which
# incorrectly fires a window resize event when a window is initialized on macOS
# Need to fetch imgui and imgui-winit-support from github until that fix is released
winit               = { version = "^0.29", features = ["rwh_05"] }
imgui = {git = "https://github.com/imgui-rs/imgui-rs", rev = "ca05418"}
imgui-winit-support = {git = "https://github.com/imgui-rs/imgui-rs", rev = "ca05418"}

raw-window-handle   = "0.5.0"
gltf                = "1.4.0"
phf                 = { version = "0.11.2", features = ["macros"] }
once_cell = "1.18.0"
nalgebra-glm = "0.18.0"

[build-dependencies]
glob        = "0.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "^0.3", features = ["windef", "libloaderapi"] }
