[package]
name = "framegraph-examples"
version = "0.0.1"
edition = "2021"

[dependencies]
ash                 = {version = "^0.38", features = ["linked"]}
context             = {path="../context"}
framegraph          = {path="../framegraph"}
passes              = {path="../passes"}
util                = {path="../util"}
api_types           = {path="../api_types"}
profiling           = {path="../profiling"}
gpu-allocator       = "^0.27"
log                 = "0.4.21"
simple_logger       = "5.0.0"
tracing             = "0.1.40"
tracing-subscriber  = "0.3.18"
tracing-tracy       = "0.11.1"
tracy-client        = "0.17.1"

# released versions of imgui-winit-support use an older version of winit which
# incorrectly fires a window resize event when a window is initialized on macOS
# Need to fetch imgui and imgui-winit-support from github until that fix is released
winit               = { version = "^0.29"}
imgui = {git = "https://github.com/imgui-rs/imgui-rs", rev = "ca05418"}
imgui-winit-support = {git = "https://github.com/imgui-rs/imgui-rs", rev = "ca05418"}

raw-window-handle   = "0.5.0"
gltf                = "1.4.0"
phf                 = { version = "0.11.2", features = ["macros"] }
once_cell = "1.18.0"
nalgebra-glm = "0.18.0"

[build-dependencies]
glob        = "0.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "^0.3", features = ["windef", "libloaderapi"] }