[package]
name = "framegraph"
version = "0.1.0"
edition = "2021"

[dependencies]
ash             = {version = "^0.37", features = ["linked"]}
petgraph        = {version = "^0.6", features = ["stable_graph"]}
multimap        = "^0.8.0"
gpu-allocator   = "^0.25"
rspirv-reflect = "0.8.0"
context         =  {path="../context"}
log             = "0.4.21"
tracing         = "0.1.40"
util            = {path="../util"}
