[package]
name = "passes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash             = {version = "^0.36", features = ["linked"]}
glam            = "0.21.2"
imgui           = "0.9.0"
gpu-allocator   = "^0.17"
context         =  {path="../context"}
framegraph      = {path="../framegraph"}