[package]
name = "passes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash             = {version = "^0.38", features = ["linked"]}
glam            = "0.21.2"
log             = "0.4.21"
tracing         = "0.1.40"

# released versions of imgui-winit-support use an older version of winit which
# incorrectly fires a window resize event when a window is initialized on macOS
# Need to fetch imgui and imgui-winit-support from github until that fix is released
imgui = {git = "https://github.com/imgui-rs/imgui-rs", rev = "ca05418"}

gpu-allocator   = "^0.27"
context         =  {path="../context"}
framegraph      = {path="../framegraph"}
util            = {path="../util"}
api_types       = {path="../api_types"}
profiling       = {path="../profiling"}

[build-dependencies]
glob            = "0.3.1"