[package]
name = "test-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc                = "0.2.147"
ash                 = {version = "^0.37", features = ["linked"]}
ash-window          = "^0.9"
image               = "^0.23"
memoffset           = "^0.6"
cgmath              = "^0.18"
tobj                = "^3.2"
num                 = "^0.4"
context             = {path="../context"}
framegraph          = {path="../framegraph"}
passes              = {path="../passes"}
glam                = "0.21.2"
gpu-allocator       = "^0.17"

# released versions of imgui-winit-support use an older version of winit which
# incorrectly fires a window resize event when a window is initialized on macOS
# Need to fetch imgui and imgui-winit-support from github until that fix is released
winit               = { version = "^0.29", features = ["rwh_05"] }
imgui = {git = "https://github.com/imgui-rs/imgui-rs", rev = "ca05418"}
imgui-winit-support = {git = "https://github.com/imgui-rs/imgui-rs", rev = "ca05418"}

[build-dependencies]
glob        = "0.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "^0.3", features = ["windef", "libloaderapi"] }
