[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash                 = {version = "^0.37"}
gpu-allocator       = "^0.25"
nalgebra-glm        = "0.18.0"
context             = {path="../context"}
image               = "0.25.2"
